# ai-barracks-cc

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  watcher.rs
src-tauri/src/commands/: barracks.rs  files.rs  git.rs  mod.rs  search.rs  sessions.rs  sync.rs  terminal.rs  wiki.rs
src/components/barrack/: BarrackOverview.tsx
src/components/editor/: FilesTab.tsx  GrowthFormEditor.tsx  OwnershipBanner.tsx  RulesEditor.tsx  SoulFormEditor.tsx  YamlFormEditor.tsx
src/components/git/: GitTab.tsx
src/components/layout/: MainContent.tsx  Sidebar.tsx
src/components/session/: EmbeddedTerminalInstance.tsx  EmbeddedTerminalPanel.tsx  EmbeddedTerminalTabBar.tsx  LiveTerminals.tsx  SessionCard.tsx  SessionsTab.tsx  embeddedTerminalReducer.ts
src/components/system/: CommandPalette.tsx  NotificationToast.tsx  SearchBar.tsx  SystemView.tsx
src/components/terminal/: AgentTerminalPanel.tsx  PanelResizeHandle.tsx  SlotHeader.tsx  TerminalPanel.tsx  TerminalSettings.tsx  TerminalTabBar.tsx  XTermInstance.tsx
src/components/wiki/: WikiTab.tsx
src/hooks/: useEmbeddedTerminalResize.ts  useTerminal.ts
src/stores/: appStore.ts  notificationStore.ts  terminalStore.ts
src/types/: index.ts
