[package]
name = "ai-barracks-cc"
version = "0.3.1"
description = "AI Barracks CommandCenter"
edition = "2021"

[lib]
name = "ai_barracks_cc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
dirs = "6"
notify = { version = "8", features = ["macos_fsevent"] }
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
